--- a/configs/radar-ml/pipeline_mobilenet_v2_ssd_retrain_last_few_layers.config
+++ b/configs/radar-ml/pipeline_mobilenet_v2_ssd_retrain_last_few_layers.config
@@ -1,8 +1,9 @@
 # Quantized fine tune SSD with Mobilenet v2 on radar-ml image data set.
+# This config is using the alt label map. 
 
 model {
   ssd {
-    num_classes: 7
+    num_classes: 3
     image_resizer {
       fixed_shape_resizer {
         height: 300
@@ -133,7 +134,7 @@ model {
   }
 }
 train_config {
-  batch_size: 64
+  batch_size: 32
   data_augmentation_options {
     random_horizontal_flip {
     }
@@ -146,55 +147,77 @@ train_config {
   optimizer {
     momentum_optimizer {
       learning_rate {
-        cosine_decay_learning_rate {
-          learning_rate_base: 0.20000000298
-          total_steps: 1000
-          warmup_learning_rate: 0.0599999986589
-          warmup_steps: 100
+        manual_step_learning_rate {
+          initial_learning_rate: 0.002
+          schedule {
+            step: 2000
+            learning_rate: .0002
+          }
+          schedule {
+            step: 8000
+            learning_rate: .00002
+          }
         }
+        #cosine_decay_learning_rate {
+          #learning_rate_base: 0.20000000298
+          #total_steps: 10000
+          #warmup_learning_rate: 0.0599999986589
+          #warmup_steps: 1000
+        #}
       }
       momentum_optimizer_value: 0.899999976158
     }
     use_moving_average: false
   }
-  fine_tune_checkpoint: "./checkpoints/model.ckpt"
+  fine_tune_checkpoint: "./checkpoints/ssd_mobilenet_v2_quantized_coco/model.ckpt"
   from_detection_checkpoint: true
   load_all_detection_checkpoint_vars: true
-  num_steps: 50000
+  num_steps: 10000
   startup_delay_steps: 0.0
   replicas_to_aggregate: 8
   max_number_of_boxes: 100
   unpad_groundtruth_tensors: false
-  freeze_variables:
-        [ 'FeatureExtractor/MobilenetV2/Conv/',
-          'FeatureExtractor/MobilenetV2/expanded_conv/',
-          'FeatureExtractor/MobilenetV2/expanded_conv_1/',
-          'FeatureExtractor/MobilenetV2/expanded_conv_2/',
-          'FeatureExtractor/MobilenetV2/expanded_conv_3/',
-          'FeatureExtractor/MobilenetV2/expanded_conv_4/',
-          'FeatureExtractor/MobilenetV2/expanded_conv_5/',
-          'FeatureExtractor/MobilenetV2/expanded_conv_6/',
-          'FeatureExtractor/MobilenetV2/expanded_conv_7/']
+  freeze_variables:[
+    'FeatureExtractor/MobilenetV2/Conv/',
+    'FeatureExtractor/MobilenetV2/expanded_conv/',
+    'FeatureExtractor/MobilenetV2/expanded_conv_1/',
+    'FeatureExtractor/MobilenetV2/expanded_conv_2/',
+    'FeatureExtractor/MobilenetV2/expanded_conv_3/',
+    'FeatureExtractor/MobilenetV2/expanded_conv_4/'
+    'FeatureExtractor/MobilenetV2/expanded_conv_5/',
+    'FeatureExtractor/MobilenetV2/expanded_conv_6/',
+    'FeatureExtractor/MobilenetV2/expanded_conv_7/'
+    #'FeatureExtractor/MobilenetV2/expanded_conv_8/',
+    #'FeatureExtractor/MobilenetV2/expanded_conv_9/',
+    #'FeatureExtractor/MobilenetV2/expanded_conv_10/',
+    #'FeatureExtractor/MobilenetV2/expanded_conv_11/',
+    #'FeatureExtractor/MobilenetV2/expanded_conv_12/',
+    #'FeatureExtractor/MobilenetV2/expanded_conv_13/',
+    #'FeatureExtractor/MobilenetV2/expanded_conv_14/',
+    #'FeatureExtractor/MobilenetV2/expanded_conv_15/',
+    #'FeatureExtractor/MobilenetV2/expanded_conv_16/',
+    #'FeatureExtractor/MobilenetV2/Conv_1/'
+  ]
 }
 train_input_reader: {
   tf_record_input_reader {
     input_path: "./tf-record/radar-ml/train-00000-of-00001"
   }
-  label_map_path: "./annotations/radar-ml/label_map.pbtxt"
+  label_map_path: "./annotations/radar-ml/alt_label_map.pbtxt"
   num_readers: 1
 }
 eval_config {
-  num_visualizations: 1158
-  num_examples: 1158
-  max_evals: 290
+  metrics_set: "pascal_voc_detection_metrics"
+  num_visualizations: 100
+  num_examples: 8000
   use_moving_averages: false
 }
 eval_input_reader: {
   tf_record_input_reader {
     input_path: "./tf-record/radar-ml/val-00000-of-00001"
   }
-  label_map_path: "./annotations/radar-ml/label_map.pbtxt"
-  shuffle: true
+  label_map_path: "./annotations/radar-ml/alt_label_map.pbtxt"
+  shuffle: false
   num_readers: 1
 }
 graph_rewriter {
